# TabPVN

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: __init__.py  affine_composition_probe.py  affine_rank_audit.py  african_credit_challenge.py  african_credit_tabfm.py  beyondarena_1m_audit.py  categorical_posterior_audit.py  datasets.py  global_shape_probe.py  higgs_scale_audit.py  logit_calibration_probe.py  numeric_interval_decision_audit.py  numeric_likelihood_probe.py  ordinal_shape_probe.py  pairwise_boost_probe.py  rank_temperature_probe.py  rare_architecture_audit.py  rare_event_audit.py  relational_hierarchy_audit.py  relational_materialization_audit.py  relational_out_of_core_audit.py  residual_stream_dynamics_audit.py  talkingdata_temporal_audit.py  weak_pair_boost_probe.py  wide_affine_probe.py  world_cup_2026_challenge.py
benchmark/experiments/: models.py  run.py
core/: __init__.py  fol_kg_induction.py  kernel_fol.py
scripts/: release_check.sh
tabpvn/: __init__.py  _version.py  adapters.py  api.py  attention.py  attestations.py  base.py  bayes.py  candidate_allocation.py  certified_boost.py  certified_confidence.py  compression_evidence.py  event_schema.py  model_io.py  operating_points.py  pipeline.py  predicate_compiler.py  preprocessing.py  pricing.py  proofs.py  region_algebra.py  relational.py  residual_dynamics.py  scenario_validation.py  temporal.py  trees.py  validation.py
tabpvn/proposers/: __init__.py  affine.py  base.py  evidence.py  posterior.py  routing.py  temporal.py
tabpvn/tests/: test_affine_rank.py  test_api.py  test_architecture_boundaries.py  test_bayes.py  test_benchmark_protocol.py  test_benchmark_registry.py  test_candidate_allocation.py  test_categorical_posterior.py  test_compiled_regions.py  test_compression_evidence.py  test_crossfit_evidence.py  test_default_gates.py  test_expert_routing.py  test_fast_numeric_forest.py  test_fit_parallelism.py  test_multiclass_architecture.py  test_native_categorical.py  test_numeric_interval_decision.py  test_oof_parallel.py  test_pricing.py  test_prior_rank_projection.py  test_production_contract.py  test_proof_path_memory.py  test_proof_response.py  test_rare_events.py  test_region_algebra.py  test_relational.py  test_residual_dynamics.py  test_scenario_validation.py  test_symbolic_programs.py  test_target_encoding.py  test_temporal.py  test_temporal_gate.py  test_temporal_validation.py
tools/: verify_runtime_artifact.py
